<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/setting_group_title1">
        
        <EditTextPreference 
            android:key="@string/setting_number1_key"
            android:title="@string/setting_number1"
            android:summary="@string/setting_server_description"
            android:defaultValue="@string/setting_number1_default"/>
        
        <EditTextPreference 
            android:key="@string/setting_number2_key"
            android:title="@string/setting_number2"
            android:summary="@string/setting_port_description"
            android:defaultValue="@string/setting_number2_default"/>
        
        <EditTextPreference 
            android:key="@string/setting_number3_key"
            android:title="@string/setting_number3"
            android:summary="@string/setting_duration_description"
            android:defaultValue="@string/setting_number3_default"/>
        <ListPreference 
            android:key="@string/setting_number4_key"
            android:title="@string/setting_number4"
            android:defaultValue="@string/setting_number4_default"
            android:entryValues="@array/test_type_values"
            android:entries="@array/test_type_array"/>

    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/setting_group_title2">
        
        <CheckBoxPreference
            android:key="@string/setting_number5_key"
            android:title="@string/setting_number5"
            android:summary="@string/setting_location_description"
            android:defaultValue="true"/>
        
		<ListPreference 
            android:key="@string/setting_number6_key"
            android:title="@string/setting_number6"
            android:defaultValue="@string/setting_number6_default"
            android:entryValues="@array/unit_type_values"
            android:entries="@array/unit_type_arrays"/>
		<ListPreference 
            android:key="@string/setting_number7_key"
            android:title="@string/setting_number7"
            android:defaultValue="@string/setting_number7_default"
            android:entryValues="@array/font_size_values"
            android:entries="@array/font_size_arrays"/>
		<ListPreference 
            android:key="@string/setting_number8_key"
            android:title="@string/setting_number8"
            android:defaultValue="@string/setting_number8_default"
            android:entryValues="@array/graph_type_values"
            android:entries="@array/graph_type_arrays"/>
		<ListPreference 
            android:key="@string/setting_number9_key"
            android:title="@string/setting_number9"
            android:defaultValue="@string/setting_number9_default"
            android:entryValues="@array/font_size_values"
            android:entries="@array/font_size_arrays"/>
        
    </PreferenceCategory>
</PreferenceScreen>